--- a/css/courses-style.css
+++ b/css/courses-style.css
@@ -74,11 +74,11 @@ body{
     }
   }
   .divider{
-    background-color: #3F72AF;
-    width: 50%;
-    height: 0.01px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    opacity: 50%;
+    border-style: none;
+    border-top-style: dotted;
+    width: 5%;
+    border-width: 5px;
+    border-color: #07689F;
+    opacity: .6;
   }
   
