--- a/css/styles.css
+++ b/css/styles.css
@@ -63,10 +63,11 @@ margin: 100px 0;
     }
 }
 .divider{
-  background-color: #3F72AF;
-  width: 50%;
-  height: 0.01px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  opacity: 50%;
+  border-style: none;
+  border-top-style: dotted;
+  width: 5%;
+  border-width: 5px;
+  border-color: #07689F;
+  opacity: .25;
 }
+
