--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ p{
   line-height: 2;
   color:#888888;
 }
+.courses{
+  text-decoration: none !important;
+  color: #33313B !important;
+}
 .jumbotron{
   color: #07689F;
   background-color: #fff !important;
@@ -41,7 +45,6 @@ color: #07689F;
 margin: 100px 5px;
 padding: 5px;
 }
-
 .bottom-container{
   background-color: #DBE2EF;
   color: #fff;
@@ -69,4 +72,6 @@ padding: 5px;
   border-color: #07689F;
   opacity: .25;
 }
-
+.dropdown-submenu{
+  position: relative;
+}
