--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
   /*margin: 0;*/
   text-align: center;
+  margin: auto;
 }
 h1,h2,h3,h4,h5,h6{
   margin-top: 0;
@@ -50,8 +51,10 @@ padding: 5px;
 .bottom-container{
   background-color: #DBE2EF;
   color: #fff;
-  padding: 50px 0;
+  left: 0;
+  height: 200px;
   width: 100%;
+  padding: 50px 0;
 }
 .course-icon{
   width: 100%;
