--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ padding: 5px;
 }
 .bottom-container{
   background-color: #DBE2EF;
+  position: absolute;
   color: #fff;
   left: 0;
   height: 200px;
