--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,21 @@ p{
   color:#888888;
 }
 
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
 
 .courses{
   text-decoration: none !important;
@@ -48,6 +63,7 @@ color: #07689F;
 margin: 100px 5px;
 padding: 5px;
 }
+
 .bottom-container{
   background-color: #DBE2EF;
   position: absolute;
@@ -56,6 +72,8 @@ padding: 5px;
   height: 200px;
   width: 100%;
   padding: 50px 0;
+}
+
 }
 .course-icon{
   width: 100%;
