--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,11 @@ padding: 5px;
 
 .bottom-container{
   background-color: #DBE2EF;
-  position: absolute;
   color: #fff;
-  left: 0;
-  height: 200px;
   width: 100%;
-  padding: 50px 0;
+  left:0;
+  right:0;
+  padding: 0,50px;
 }
 
 }
