--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
   /*margin: 0;*/
   text-align: center;
+  margin: auto;
 }
 h1,h2,h3,h4,h5,h6{
   margin-top: 0;
@@ -15,7 +16,33 @@ p{
   line-height: 2;
   color:#888888;
 }
+/*cards*/
+* {
+  box-sizing: border-box;
+}
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 10px 10px 10px 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   padding: 16px;
@@ -31,6 +58,7 @@ p{
     margin-bottom: 20px;
   }
 }
+
 
 .courses{
   text-decoration: none !important;
@@ -62,16 +90,12 @@ color: #07689F;
 margin: 100px 5px;
 padding: 5px;
 }
-
 .bottom-container{
   background-color: #DBE2EF;
   color: #fff;
   width: 100%;
   left:0;
   right:0;
-  padding: 0,50px;
-}
-
 }
 .course-icon{
   width: 100%;
@@ -105,3 +129,4 @@ padding: 5px;
   text-align: left;
   margin-bottom: 20px;
 }
+
