--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,14 @@ body {
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
+  transition: all .5s ease;
+}
+.card:hover {
+  transform: scale(1.05);
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
   .column {
     width: 100%;
     display: block;
@@ -90,19 +94,22 @@ color: #07689F;
 margin: 100px 5px;
 padding: 5px;
 }
+
 .bottom-container{
   background-color: #DBE2EF;
   color: #fff;
   width: 100%;
+  height: 130px;
   left:0;
   right:0;
+  margin: 0;
 }
 .course-icon{
   width: 100%;
 }
 @media screen and (max-width: 576px) {
   .course-icon {
-    width: 50%;
+    width: 60%;
   }
   .row{
     text-align: center;
@@ -126,7 +133,6 @@ padding: 5px;
   position: relative;
 }
 .social{
-  text-align: left;
-  margin-bottom: 20px;
+  padding: 20px;
 }
 
