--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,9 @@ body {
   font-size: 15px;
   padding: 0% !important;
 }
+.member{
+  margin-bottom: 5% !important;
+}
 .courses{
   text-decoration: none !important;
   color: #33313B !important;
