--- a/css/courses-style.css
+++ b/css/courses-style.css
@@ -27,12 +27,14 @@ body{
       color: #fff !important;
       position: relative;
       padding-top: 30px;
+      border-radius:  0 0 85% 85% / 30%;
     }
   
   .middle-container{
   background-color: #fff;
   color: #07689F;
   margin: 100px 0;
+  border-radius: 85% 85% 0 0 / 30%;
   }
   
   .bottom-container{
