--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body {
   transition: all .5s ease;
 }
 .card:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
@@ -195,4 +195,7 @@ padding: 5px;
 }
 .courses-page h2{
   margin: 2%;
+}
+.courses-page .card{
+  margin-top: 5%;
 }
