--- a/css/styles.css
+++ b/css/styles.css
@@ -219,14 +219,15 @@ padding: 5px;
 }
 
 
-#style-7::-webkit-scrollbar,
+#style-7:-webkit-scrollbar
  {
 	width: 10px;
 	background-color: #F5F5F5;
 }
 
-#style-7::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+#style-7:-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	background-color: #F5F5F5;
 	border-radius: 10px;
 }
@@ -239,4 +240,13 @@ padding: 5px;
 									   color-stop(0.44, rgb(122,153,217)),
 									   color-stop(0.72, rgb(73,125,189)),
 									   color-stop(0.86, rgb(28,58,148)));
+}
+
+.validate{
+  display: inline-flex;
+}
+.validate input{
+  margin: 0%;
+  margin-right: 5px;
+  padding: 0%;
 }
