--- a/css/styles.css
+++ b/css/styles.css
@@ -250,3 +250,13 @@ padding: 5px;
   margin-right: 5px;
   padding: 0%;
 }
+.center{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+ul{
+  margin: 0;
+  padding: 0;
+}
